<resources>
    <string name="app_name">Exercicios</string>
    <string name="Ex1_nome">Nome</string>
    <string name="Ex1_sobrenome">SobreNome</string>
    <string name="Ex1_ola">Olá</string>
    <string name="EX1_BtnOla2">Olá,</string>
    <string name="Ex1_msg">Mensagem</string>
    <string name="Ex1_camposVazios">Por favor preencher todos os campos!</string>
    <string name="Ex2_Nome">Nome</string>
    <string name="Ex2_sobrenome">Sobrenome</string>
    <string name="Ex2_Genero">Gênero</string>
    <string name="Ex2_EstadoCivil">Estado civil</string>
    <string name="Ex2_Feminino">Feminino</string>
    <string name="Ex2_Masculino">Masculino</string>
    <string name="Ex2_PrefiroNaoInformar">Prefiro não informar</string>
    <string name="Ex2_Solteiro">Solteiro(a)</string>
    <string name="Ex2_Casado">Casado(a)</string>
    <string name="Ex2_Viuvo">Viúvo(a)</string>
    <string name="Ex2_VerInformacoes">Ver informações</string>
    <string name="Ex2_msg">Olá!</string>
    <string name="Ex2_Preferencias">Preferências</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado</string>
    <string name="conversor_metrico_imperial">Conversor Métrico/Imperial</string>
    <string name="metrico_para_imperial">Métrico para Imperial</string>
    <string name="imperial_para_metrico">Imperial para Métrico</string>
    <string name="centimetros_cm">Centímetros (cm)</string>
    <string name="polegadas">Polegadas</string>
    <string name="metros_m">Métros (m)</string>
    <string name="pes">Pés</string>
    <string name="kilometros_km">kilometros (km)</string>
    <string name="milhas">Milhas</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>